# rust-rpc

./: Cargo.toml
rpc_client/: Cargo.toml
rpc_client/src/: main.rs
rpc_interface/: Cargo.toml
rpc_interface/src/: lib.rs
rpc_lib/: Cargo.toml
rpc_lib/rpc_macro/: Cargo.toml
rpc_lib/rpc_macro/src/: lib.rs
rpc_lib/src/: lib.rs
rpc_macro/src/: lib.rs
rpc_serialize/: Cargo.toml
rpc_serialize/rpc_serialize_derive/: Cargo.toml
rpc_serialize/rpc_serialize_derive/src/: lib.rs
rpc_serialize/src/: lib.rs  ser.rs
rpc_serialize/src/binary/: mod.rs
rpc_server/: Cargo.toml
rpc_server/src/: main.rs
