[package]
name = "rpc_serialize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
async-trait = "0.1.51"
error = "0.1.9"
rpc_serialize_derive = { path = "./rpc_serialize_derive" }