[package]
name = "rpc_macro"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.29"
syn =  { version = "1.0", features = ["derive", "full", "extra-traits"] }
quote = "1.0"
serde = "1.0.130"
bincode = "1.3.3"
